fix: readme and headings font-size on mobile devices

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,6 @@ sn-image-loader {
 	h4,
 	h5,
 	h6 {
-		font-size: 1.5rem;
+		font-size: 1.4rem;
 	}
 }
